# decal_on_a_car

./: .gitignore  CMakeLists.txt  LICENSE  SYLLABUS.md
course/: README (1).md  README.md  README_DEV.md  SUMMARY.md
course/c++/: chapter-0-basics.md  chapter-x-threadings.md  hw0.md  project-1-cal-vector.md
course/group-1/: chapter-0-basics.md
project_code/: CMakeLists.txt  main.cpp
project_code/chapter_0/: CMakeLists.txt  control_flow.cpp  hello_world.cpp  hello_world_output.txt  main_2.cpp  variables_and_types.cpp
